# ChangeLog for media-video/ffmpeg
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*ffmpeg-9999-r1 (17 Jun 2010)
*ffmpeg-0.6 (17 Jun 2010)

  17 Jun 2010; Nikoli <nikoli@lavabit.com> +ffmpeg-0.6.ebuild,
  +ffmpeg-9999-r1.ebuild, +metadata.xml:
  testing some fixes
