@@ -1,5 +1,5 @@
 DIST ffmpeg-0.6.tar.bz2 3720372 RMD160 1ff6a8f419239a03d84f67cc954f60f73632432a SHA1 c130e3bc368251b9130ce6eafb44fe8c3993ff5c SHA256 6730baa6750f0cbffaf5f4c04f8ddcf1ebe6c651a6eeb12ae947a228de4c8120
-EBUILD ffmpeg-0.6.ebuild 7797 RMD160 fc90177679ca0b1d4a2ad077d3f7fcf328e7f3ef SHA1 04927172f22f775a6a31676438cadb7c486e71d3 SHA256 d69a1935bb03c5f36fbff393d56e1daeed6641e52343f149112016cc078b9779
-EBUILD ffmpeg-9999-r1.ebuild 7797 RMD160 fc90177679ca0b1d4a2ad077d3f7fcf328e7f3ef SHA1 04927172f22f775a6a31676438cadb7c486e71d3 SHA256 d69a1935bb03c5f36fbff393d56e1daeed6641e52343f149112016cc078b9779
-MISC ChangeLog 302 RMD160 5bd782eae162a7143d5a9890d687e14f00157274 SHA1 041da020d0850ce4bb94b1a404f567c765d57efe SHA256 f3b0cce6ed462d756979300733d6f732cdbac6d8b322ab19e6d7ae8a2637e12f
+EBUILD ffmpeg-0.6.ebuild 8108 RMD160 543fd68fbd91491e3f79660fce1259c4e4fbd492 SHA1 eafc1b2e1e3922919ac3f786f208b03b19ab6c10 SHA256 3b25ceba994101f9ce8f7921d26bdd4149a72d309563b7feebef5e5329db3433
+EBUILD ffmpeg-9999-r1.ebuild 8108 RMD160 543fd68fbd91491e3f79660fce1259c4e4fbd492 SHA1 eafc1b2e1e3922919ac3f786f208b03b19ab6c10 SHA256 3b25ceba994101f9ce8f7921d26bdd4149a72d309563b7feebef5e5329db3433
+MISC ChangeLog 419 RMD160 fb51fe507d092fa2548a2fc1d5bb7c24305fcfed SHA1 d88c7a61e8a70fa31fc306d6439017b8cd539934 SHA256 dbbe9eb9ca3859e0be3bd64ddfc027bbfbc2fd77bcb674cb195d0804f4f52f2b
 MISC metadata.xml 2012 RMD160 3d25544e563b33eb0b13315b9d3d44c5630dd6d1 SHA1 bbc047b1e4d759c9d026d53ac8c5e52360bc2bf0 SHA256 3da74054275b6e6302f6b337d48679e59a9649f660bca9c1770ff602e225aab3
