@@ -1,11 +1,11 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/ffmpeg/ffmpeg-9999-r1.ebuild,v 1.37 2010/06/12 21:54:13 spatz Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/ffmpeg/ffmpeg-9999-r1.ebuild,v 1.42 2010/06/18 06:57:00 aballier Exp $
 
 EAPI="2"
 
 SCM=""
-if [[ ${PV} == *9999* ]]; then
+if [ "${PV#9999}" != "${PV}" ] ; then
 	SCM="subversion"
 	ESVN_REPO_URI="svn://svn.ffmpeg.org/ffmpeg/trunk"
 fi
@@ -14,7 +14,7 @@ inherit eutils flag-o-matic multilib toolchain-funcs ${SCM}
 
 DESCRIPTION="Complete solution to record, convert and stream audio and video. Includes libavcodec."
 HOMEPAGE="http://ffmpeg.org/"
-if [[ ${PV} == *9999* ]]; then
+if [ "${PV#9999}" != "${PV}" ] ; then
 	SRC_URI=""
 elif [ "${PV%_p*}" != "${PV}" ] ; then # Snapshot
 	SRC_URI="mirror://gentoo/${P}.tar.bz2"
@@ -25,7 +25,7 @@ FFMPEG_REVISION="${PV#*_p}"
 
 LICENSE="GPL-3"
 SLOT="0"
-if [[ ${PV} == *9999* ]]; then
+if [ "${PV#9999}" != "${PV}" ] ; then
 	KEYWORDS=""
 else
 	KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd"
@@ -38,7 +38,7 @@ threads +tools v4l v4l2 vaapi vdpau vorbis vpx X x264 xvid +zlib"
 VIDEO_CARDS="nvidia"
 
 for x in ${VIDEO_CARDS}; do
-	IUSE+=" video_cards_${x}"
+	IUSE="${IUSE} video_cards_${x}"
 done
 
 RDEPEND="
@@ -49,38 +49,24 @@ RDEPEND="
 	encode? (
 		faac? ( media-libs/faac )
 		mp3? ( media-sound/lame )
-		theora? (
-			>=media-libs/libtheora-1.1.1[encode]
-			media-libs/libogg
-		)
-		vorbis? (
-			media-libs/libvorbis
-			media-libs/libogg
-		)
+		theora? ( >=media-libs/libtheora-1.1.1[encode] media-libs/libogg )
+		vorbis? ( media-libs/libvorbis media-libs/libogg )
 		x264? ( >=media-libs/x264-0.0.20100605 )
 		xvid? ( >=media-libs/xvid-1.1.0 )
 	)
 	faad? ( >=media-libs/faad2-2.6.1 )
 	gsm? ( >=media-sound/gsm-1.0.12-r1 )
-	ieee1394? (
-		media-libs/libdc1394
-		sys-libs/libraw1394
-	)
+	ieee1394? ( media-libs/libdc1394 sys-libs/libraw1394 )
 	jack? ( media-sound/jack-audio-connection-kit )
 	jpeg2k? ( >=media-libs/openjpeg-1.3-r2 )
 	rtmp? ( media-video/rtmpdump )
 	schroedinger? ( media-libs/schroedinger )
 	speex? ( >=media-libs/speex-1.2_beta3 )
+	tools? ( sdl? ( >=media-libs/libsdl-1.2.10[audio,alsa?,oss?,video,X] ) )
+	vaapi? ( x11-libs/libva[video_cards_nvidia?] )
+	video_cards_nvidia? ( vdpau? ( x11-libs/libvdpau ) )
 	vpx? ( media-libs/libvpx )
-	X? (
-		x11-libs/libX11
-		x11-libs/libXext
-		tools? ( sdl? ( >=media-libs/libsdl-1.2.10[audio,alsa?,oss?,video,X] ) )
-		vaapi? ( x11-libs/libva[video_cards_nvidia?] )
-		video_cards_nvidia? (
-			vdpau? ( x11-libs/libvdpau )
-		)
-	)
+	X? ( x11-libs/libX11 x11-libs/libXext )
 	zlib? ( sys-libs/zlib )
 "
 
@@ -97,7 +83,7 @@ DEPEND="${RDEPEND}
 "
 
 src_prepare() {
-	if [[ ${PV} = *9999* ]]; then
+	if [ "${PV#9999}" != "${PV}" ] ; then
 		# Set SVN version manually
 		subversion_wc_info
 		sed -i -e "s/UNKNOWN/SVN-r${ESVN_WC_REVISION}/" "${S}/version.sh" || die
@@ -110,83 +96,83 @@ src_configure() {
 	local myconf="${EXTRA_FFMPEG_CONF}"
 
 	# enabled by default
-	for i in debug doc network vaapi vdpau zlib; do
-		use ${i} || myconf+=" --disable-${i}"
+	for i in debug doc network vaapi zlib; do
+		use ${i} || myconf="${myconf} --disable-${i}"
 	done
-	use bzip2 || myconf+=" --disable-bzlib"
-	use sdl || myconf+=" --disable-ffplay"
-	use static-libs || myconf+=" --disable-static"
-	use tools || myconf+="
+	use bzip2 || myconf="${myconf} --disable-bzlib"
+	use sdl || myconf="${myconf} --disable-ffplay"
+	use static-libs || myconf="${myconf} --disable-static"
+	use tools || myconf="${myconf}
 		--disable-ffmpeg
 		--disable-ffplay
 		--disable-ffprobe
 		--disable-ffserver
 		"
 
+	use custom-cflags && myconf="${myconf} --disable-optimizations"
+	use cpudetection && myconf="${myconf} --enable-runtime-cpudetect"
+
 	#for i in h264_vdpau mpeg1_vdpau mpeg_vdpau vc1_vdpau wmv3_vdpau; do
-	#	use video_cards_nvidia || myconf+=" --disable-decoder=${i}"
-	#	use vdpau || myconf+=" --disable-decoder=${i}"
+	#	use video_cards_nvidia || myconf="${myconf} --disable-decoder=${i}"
+	#	use vdpau || myconf="${myconf} --disable-decoder=${i}"
 	#done
-	use video_cards_nvidia || myconf+=" --disable-vdpau"
+	use video_cards_nvidia && use vdpau || myconf="${myconf} --disable-vdpau"
 
-	use custom-cflags && myconf+=" --disable-optimizations"
-	use cpudetection && myconf+=" --enable-runtime-cpudetect"
-
-	# enabled by default
+	# Encoders
 	if use encode
 	then
-		use mp3 && myconf+=" --enable-libmp3lame"
+		use mp3 && myconf="${myconf} --enable-libmp3lame"
 		for i in theora vorbis x264 xvid; do
-			use ${i} && myconf+=" --enable-lib${i}"
+			use ${i} && myconf="${myconf} --enable-lib${i}"
 		done
 		if use bindist
 		then
 			use faac && ewarn "faac is nonfree and cannot be distributed;
 			disabling faac support."
 		else
-			use faac && myconf+=" --enable-libfaac --enable-nonfree"
+			use faac && myconf="${myconf} --enable-libfaac --enable-nonfree"
 		fi
 	else
-		myconf+=" --disable-encoders"
+		myconf="${myconf} --disable-encoders"
 	fi
 
 	# libavdevice options
-	use ieee1394 && myconf+=" --enable-libdc1394"
+	use ieee1394 && myconf="${myconf} --enable-libdc1394"
 	# Indevs
 	for i in v4l v4l2 alsa oss jack ; do
-		use ${i} || myconf+=" --disable-indev=${i}"
+		use ${i} || myconf="${myconf} --disable-indev=${i}"
 	done
+	use X && myconf="${myconf} --enable-x11grab"
 	# Outdevs
 	for i in alsa oss ; do
-		use ${i} || myconf+=" --disable-outdev=${i}"
+		use ${i} || myconf="${myconf} --disable-outdev=${i}"
 	done
-	use X && myconf+=" --enable-x11grab"
 
 	# Threads; we only support pthread for now but ffmpeg supports more
-	use threads && myconf+=" --enable-pthreads"
+	use threads && myconf="${myconf} --enable-pthreads"
 
 	# Decoders
-	use amr && myconf+=" --enable-libopencore-amrwb --enable-libopencore-amrnb"
+	use amr && myconf="${myconf} --enable-libopencore-amrwb --enable-libopencore-amrnb"
 	for i in gsm faad dirac rtmp schroedinger speex vpx; do
-		use ${i} && myconf+=" --enable-lib${i}"
+		use ${i} && myconf="${myconf} --enable-lib${i}"
 	done
-	use jpeg2k && myconf+=" --enable-libopenjpeg"
+	use jpeg2k && myconf="${myconf} --enable-libopenjpeg"
 
 	# CPU features
 	for i in mmx ssse3 altivec ; do
-		use ${i} || myconf+=" --disable-${i}"
+		use ${i} || myconf="${myconf} --disable-${i}"
 	done
-	use mmxext || myconf+=" --disable-mmx2"
-	use 3dnow || myconf+=" --disable-amd3dnow"
-	use 3dnowext || myconf+=" --disable-amd3dnowext"
+	use mmxext || myconf="${myconf} --disable-mmx2"
+	use 3dnow || myconf="${myconf} --disable-amd3dnow"
+	use 3dnowext || myconf="${myconf} --disable-amd3dnowext"
 	# disable mmx accelerated code if PIC is required
 	# as the provided asm decidedly is not PIC.
 	if gcc-specs-pie ; then
-		myconf+=" --disable-mmx --disable-mmx2"
+		myconf="${myconf} --disable-mmx --disable-mmx2"
 	fi
 
 	# Option to force building pic
-	use pic && myconf+=" --enable-pic"
+	use pic && myconf="${myconf} --enable-pic"
 
 	# Try to get cpu type based on CFLAGS.
 	# Bug #172723
@@ -196,38 +182,38 @@ src_configure() {
 	for i in $(get-flag march) $(get-flag mcpu) $(get-flag mtune) ; do
 		[ "${i}" = "native" ] && i="host" # bug #273421
 		[[ ${i} = *-sse3 ]] && i="${i%-sse3}" # bug 283968
-		myconf+=" --cpu=${i}"
+		myconf="${myconf} --cpu=${i}"
 		break
 	done
 
 	# Mandatory configuration
-	myconf+="
+	myconf="
 		--enable-gpl
 		--enable-version3
 		--enable-postproc
 		--enable-avfilter
 		--enable-avfilter-lavf
 		--disable-stripping
-		"
+		${myconf}"
 
 	# cross compile support
 	if tc-is-cross-compiler ; then
-		myconf+=" --enable-cross-compile --arch=$(tc-arch-kernel) --cross-prefix=${CHOST}-"
+		myconf="${myconf} --enable-cross-compile --arch=$(tc-arch-kernel) --cross-prefix=${CHOST}-"
 		case ${CHOST} in
 			*freebsd*)
-				myconf+=" --target-os=freebsd"
+				myconf="${myconf} --target-os=freebsd"
 				;;
 			mingw32*)
-				myconf+=" --target-os=mingw32"
+				myconf="${myconf} --target-os=mingw32"
 				;;
 			*linux*)
-				myconf+=" --target-os=linux"
+				myconf="${myconf} --target-os=linux"
 				;;
 		esac
 	fi
 
 	# Misc stuff
-	use hardcoded-tables && myconf+=" --enable-hardcoded-tables"
+	use hardcoded-tables && myconf="${myconf} --enable-hardcoded-tables"
 
 	# Specific workarounds for too-few-registers arch...
 	if [[ $(tc-arch) == "x86" ]]; then
@@ -244,15 +230,15 @@ src_configure() {
 		fi
 	fi
 
-	myconf+="
-		--prefix=/usr
-		--libdir=/usr/$(get_libdir)
-		--shlibdir=/usr/$(get_libdir)
-		--mandir=/usr/share/man
-		--enable-shared
-		--cc=$(tc-getCC)
-		"
-	./configure ${myconf} || die "configure failed"
+	cd "${S}"
+	./configure \
+		--prefix=/usr \
+		--libdir=/usr/$(get_libdir) \
+		--shlibdir=/usr/$(get_libdir) \
+		--mandir=/usr/share/man \
+		--enable-static --enable-shared \
+		--cc="$(tc-getCC)" \
+		${myconf} || die "configure failed"
 }
 
 src_compile() {
