@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  18 Jun 2010; Nikoli <nikoli@lavabit.com> ffmpeg-0.6.ebuild,
+  ffmpeg-9999-r1.ebuild:
+  fixed configure; cosmetics
+
 *ffmpeg-9999-r1 (17 Jun 2010)
 *ffmpeg-0.6 (17 Jun 2010)
 
